Next attempt to pin NDK version

--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -153,6 +153,7 @@ if (stagingPropertiesFile.exists()){
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
+    ndkVersion rootProject.ext.ndkVersion
 
      compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
