--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -2,21 +2,22 @@
 
 buildscript {
     ext {
-        minSdkVersion = 16
-        buildToolsVersion = "29.0.2"
-        compileSdkVersion = 29
-        targetSdkVersion = 29
+        buildToolsVersion = "30.0.2"
+        minSdkVersion = 21
+        compileSdkVersion = 30
+        targetSdkVersion = 30
+        ndkVersion = "21.4.7075529"
         kotlinVersion = '1.3.41'
         firebaseMessagingVersion = "21.1.0"
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
         maven { url "https://maven.google.com" }
         maven { url "https://www.jitpack.io" }
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.4")
+        classpath("com.android.tools.build:gradle:4.2.2")
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.gms:google-services:4.3.3"
         // NOTE: Do not place your application dependencies here; they belong
@@ -26,6 +27,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         mavenLocal()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
@@ -39,8 +41,9 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
-        google()
+        // included for react-native blur view
         jcenter()
+        google()
         maven { url 'https://maven.google.com' }
         maven { url "https://www.jitpack.io" }
     }
