--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
-        kotlinVersion = '1.3.41'
+        ext.kotlinVersion = '1.5.31'
         firebaseMessagingVersion = "21.1.0"
     }
     repositories {
