--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -22,12 +22,12 @@
     "m1-install": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 yarn install"
   },
   "dependencies": {
-    "@expo/react-native-action-sheet": "3.8.0",
-    "@react-native-async-storage/async-storage": "1.13.4",
+    "@expo/react-native-action-sheet": "3.12.0",
+    "@react-native-async-storage/async-storage": "1.15.13",
     "@react-native-community/blur": "3.6.0",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/push-notification-ios": "1.8.0",
+    "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-community/slider": "3.0.3",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "1.9.11",
@@ -59,19 +59,20 @@
     "react": "17.0.2",
     "react-dom": "16.11.0",
     "react-i18next": "11.8.6",
-    "react-native": "0.66.2",
+    "react-native": "0.66.3",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "3.42.2",
     "react-native-code-push": "7.0.4",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.10.3",
-    "react-native-image-crop-picker": "0.36.0",
+    "react-native-image-crop-picker": "0.37.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
-    "react-native-keychain": "6.2.0",
-    "react-native-localize": "2.0.2",
+    "react-native-keychain": "8.0.0",
+    "react-native-localize": "2.1.5",
     "react-native-modal-overlay": "1.3.1",
-    "react-native-push-notification": "7.2.1",
-    "react-native-randombytes": "3.6.0",
+    "react-native-modpow": "^1.1.0",
+    "react-native-push-notification": "8.1.1",
+    "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.17.1",
@@ -89,7 +90,6 @@
     "rn-fetch-blob": "0.12.0",
     "stream": "0.0.2",
     "timers": "0.1.1",
-    "toggle-switch-react-native": "3.0.0",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
     "xml2js": "0.4.23"
   },
