Force all subprojects to use the same set of versions

--- a/BrightID/android/build.gradle
+++ b/BrightID/android/build.gradle
@@ -52,7 +52,14 @@ subprojects { subproject ->
     afterEvaluate{
         if((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
             android {
+                // Force all subprojects to use one and only one set of versions
+                // See https://github.com/wix/Detox/issues/2712 for context
                 compileSdkVersion rootProject.ext.compileSdkVersion
+                buildToolsVersion rootProject.ext.buildToolsVersion
+                defaultConfig {
+                    minSdkVersion rootProject.ext.minSdkVersion
+                    targetSdkVersion rootProject.ext.targetSdkVersion
+                }
             }
         }
     }
