--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -18,6 +18,7 @@
     "test:watch": "npm test -- --watch",
     "updateSnap": "jest --updateSnapshot",
     "build:release": "cd android && ./gradlew assembleRelease && cd ..",
+    "build:staging": "cd android && ./gradlew assembleStaging && cd ..",
     "mermaid": "find ./diagrams -type f -name *.mmd -exec mmdc -i {} \\;",
     "m1-install": "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=1 yarn install"
   },
