unset UseUnknownInCatchVariables to prevent hundreds of ts errors when accessing error.message

--- a/BrightID/tsconfig.json
+++ b/BrightID/tsconfig.json
@@ -42,6 +42,7 @@
     "skipLibCheck": true, /* Skip type checking of declaration files. */
     "resolveJsonModule": true,
     "baseUrl": ".",
+    "useUnknownInCatchVariables": false,
     "paths": {
       "@/*": [
         "src/*"
