--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -37,7 +37,9 @@
     "@react-navigation/stack": "5.14.2",
     "@reduxjs/toolkit": "1.5.0",
     "@types/crypto-js": "^4.1.0",
+    "@types/jsbn": "^1.2.30",
     "@types/lodash": "^4.14.178",
+    "@types/qrcode": "^1.4.2",
     "apisauce": "2.0.1",
     "appcenter": "4.3.0",
     "appcenter-analytics": "4.3.0",
