--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -46,6 +46,7 @@
     "appcenter-crashes": "4.3.0",
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
+    "compare-versions": "^4.1.3",
     "crypto-js": "3.3.0",
     "detox": "19.0.0",
     "ed2curve": "0.3.0",
