--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -43,14 +43,18 @@
     "base64-js": "1.5.1",
     "buffer": "5.6.0",
     "crypto-js": "3.3.0",
+    "d3-shape": "^3.1.0",
     "detox": "19.0.0",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
     "events": "3.2.0",
+    "expr-eval": "^2.0.2",
     "fast-json-stable-stringify": "2.1.0",
     "husky": "4.3.8",
     "i18next": "19.8.7",
     "immer": "8.0.1",
+    "js-sha256": "0.9.0",
+    "jsbn": "1.1.0",
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "promise.any": "^2.0.2",
@@ -69,6 +73,7 @@
     "react-native-image-crop-picker": "0.37.2",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.0.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-localize": "2.1.5",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "^1.1.0",
@@ -77,6 +82,7 @@
     "react-native-reanimated": "1.13.2",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "2.17.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-spinkit": "1.5.1",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "2.15.2",
@@ -92,11 +98,7 @@
     "stream": "0.0.2",
     "timers": "0.1.1",
     "tweetnacl": "https://github.com/RnbWd/tweetnacl-native",
-    "xml2js": "0.4.23",
-    "js-sha256": "0.9.0",
-    "jsbn": "1.1.0",
-    "react-native-modpow": "^1.1.0",
-    "expr-eval": "^2.0.2"
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
