--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -59,6 +59,7 @@
     "immer": "8.0.1",
     "js-sha256": "0.9.0",
     "jsbn": "1.1.0",
+    "libphonenumber-js": "^1.9.49",
     "lodash": "4.17.20",
     "moment": "2.29.1",
     "promise.any": "^2.0.2",
@@ -72,6 +73,7 @@
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "^4.2.1",
     "react-native-code-push": "7.0.4",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-crop-picker": "0.37.2",
@@ -80,6 +82,7 @@
     "react-native-localize": "2.1.5",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "^1.1.0",
+    "react-native-phone-number-input": "^2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "1.13.2",
