--- a/BrightID/.detoxrc.json
+++ b/BrightID/.detoxrc.json
@@ -1,41 +1,45 @@
 {
   "testRunner": "jest",
   "runnerConfig": "e2e/config.json",
+  "skipLegacyWorkersInjection": true,
   "behavior": {
     "init": {
       "reinstallApp": true,
-      "launchApp": false,
-      "exposeGlobals": true
+      "launchApp": false
+    }
+  },
+  "apps": {
+    "ios": {
+      "type": "ios.app",
+      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app"
+    },
+    "android": {
+      "type": "android.apk",
+      "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+      "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd .."
+    }
+  },
+  "devices": {
+    "simulator": {
+      "type": "ios.simulator",
+      "device": {
+        "type": "iPhone 11"
+      }
+    },
+    "emulator": {
+      "type": "android.emulator",
+      "device": {
+        "avdName": "Pixel_3a_API_30"
+      }
     }
   },
   "configurations": {
-    "android.emu.debug": {
-      "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
-      "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd ..",
-      "type": "android.emulator",
-      "device": {
-        "avdName": "Pixel_3a_API_30"
-      }
-    },
-    "android.emu.release": {
-      "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-      "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd ..",
-      "type": "android.emulator",
-      "device": {
-        "avdName": "Pixel_3a_API_30"
-      }
+    "android": {
+      "app": "android",
+      "device": "emulator"
     },
     "ios.sim.debug": {
-      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app",
       "build": "arch -x86_64 xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build EXCLUDED_ARCHS=arm64",
-      "type": "ios.simulator",
-      "device": {
-        "type": "iPhone 12"
-      }
-    },
-    "ios.sim.release": {
-      "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/BrightID.app",
-      "build": "arch -x86_64 xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Release -sdk iphonesimulator -derivedDataPath ios/build EXCLUDED_ARCHS=arm64",
       "type": "ios.simulator",
       "device": {
         "type": "iPhone 12"
