--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -7,10 +7,10 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "start:detox": "RN_SRC_EXT=e2e.js react-native start",
-    "build:detox:android": "detox build -c android.emu.debug",
+    "build:detox:android": "detox build -c android",
     "build:detox:ios": "detox build -c ios.sim.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
-    "test:android": "detox test -c android.emu.debug",
+    "test:android": "detox test -c android",
     "test:ios": "detox test -c ios.sim.debug",
     "test": "jest",
     "lint": "eslint 'src' --quiet --fix",
@@ -108,7 +108,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
-    "@types/jest": "^26.0.20",
+    "@types/jest": "^26.0.23",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.34",
     "@types/react-native": "^0.66.4",
@@ -139,14 +139,14 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
-    "jest": "^26.6.3",
+    "jest": "^27.5.1",
     "lint-staged": "^10.5.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "mock-async-storage": "^2.2.0",
     "prettier": "^2.2.1",
     "react-test-renderer": "17.0.2",
     "resolve": "^1.20.0",
-    "typescript": "^4.1.5"
+    "typescript": "^4.4.4"
   },
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
