--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -48,7 +48,7 @@
     "buffer": "5.6.0",
     "compare-versions": "^4.1.3",
     "crypto-js": "3.3.0",
-    "detox": "19.0.0",
+    "detox": "^19.0.0",
     "ed2curve": "0.3.0",
     "emittery": "0.6.0",
     "events": "3.2.0",
