--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -265,6 +265,10 @@ dependencies {
     // react-native-keychain
     implementation project(':react-native-keychain')
 
+    // fix getAttributes detox access
+    // https://github.com/wix/Detox/issues/3147#issuecomment-1003686980
+    implementation 'com.google.android.material:material:1.3.0'
+
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}") {
         exclude group:'com.facebook.fbjni'
     }
