--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -119,6 +119,7 @@
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
+    "axios": "^0.26.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^26.6.3",
     "babel-plugin-inline-import": "^3.0.0",
