--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -140,6 +140,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
+    "i18next-parser": "3.0.0",
     "jest": "^27.5.1",
     "lint-staged": "^10.5.3",
     "metro-react-native-babel-preset": "^0.66.2",
