--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -10,15 +10,31 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout Repo
-              uses: actions/checkout@master
+              uses: actions/checkout@v2
+
+            - name: Use Node.js 12
+              uses: actions/setup-node@v1
+              with:
+                node-version: 12.x
+
+            - name: Cache node modules
+              id: yarn-cache-debug # needed below to check for cache hit or miss
+              uses: actions/cache@v2
+              with:
+                path: './BrightID/node_modules'
+                key: ${{ runner.os }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+
             - name: Install Dependencies
-              run: npm install
+              if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
+              run: yarn --frozen-lockfile
+
             - name: Deploy to Codepush - Android
               uses: NishanthShankar/codepush-action@master
               with:
                   args: release-react -a BrightID/BrightID-android -d Staging
               env:
                   APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+
             - name: Deploy to Codepush - iOS
               uses: NishanthShankar/codepush-action@master
               with:
