Set working dir for action

--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -8,6 +8,11 @@ jobs:
         if: github.repository_owner == 'BrightID'
         name: Deploy Staging
         runs-on: ubuntu-latest
+        defaults:
+          run:
+            shell: bash
+            working-directory: BrightID/BrightID
+
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v2
@@ -21,8 +26,8 @@ jobs:
               id: yarn-cache-debug # needed below to check for cache hit or miss
               uses: actions/cache@v2
               with:
-                path: './BrightID/node_modules'
-                key: ${{ runner.os }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+                path: './node_modules'
+                key: ${{ runner.os }}-modules-${{ hashFiles('./yarn.lock') }}
 
             - name: Install Dependencies
               if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
