--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -34,15 +34,17 @@ jobs:
               run: yarn --frozen-lockfile
 
             - name: Deploy to Codepush - Android
-              uses: NishanthShankar/codepush-action@master
+              uses: FreeplayApp/codepush-action@v1
               with:
-                  args: release-react -a BrightID/BrightID-android -d Staging
+                directory: BrightID
+                args: release-react -a BrightID/BrightID-android -d Staging
               env:
-                  APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
 
             - name: Deploy to Codepush - iOS
-              uses: NishanthShankar/codepush-action@master
+              uses: FreeplayApp/codepush-action@v1
               with:
-                  args: release-react -a BrightID/BrightID-ios -d Staging
+                directory: BrightID
+                args: release-react -a BrightID/BrightID-ios -d Staging
               env:
-                  APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
