--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -28,3 +28,19 @@ jobs:
             - name: Install Dependencies
               if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
               run: cd BrightID && yarn --frozen-lockfile
+
+            - name: Deploy to Codepush - Android
+              uses: FreeplayApp/codepush-action@v1
+              with:
+                directory: BrightID
+                args: release-react -a BrightID/BrightID-android -d Staging
+              env:
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+
+            - name: Deploy to Codepush - iOS
+              uses: FreeplayApp/codepush-action@v1
+              with:
+                directory: BrightID/BrightID
+                args: release-react -a BrightID/BrightID-ios -d Staging
+              env:
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
