use access token per app

--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -35,12 +35,12 @@ jobs:
                 directory: BrightID
                 args: release-react -a BrightID/BrightID-android -d Staging
               env:
-                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN_ANDROID }}
 
             - name: Deploy to Codepush - iOS
               uses: FreeplayApp/codepush-action@master
               with:
-                directory: BrightID/BrightID
+                directory: BrightID
                 args: release-react -a BrightID/BrightID-ios -d Staging
               env:
-                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN }}
+                APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN_IOS }}
