--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -8,6 +8,9 @@ jobs:
         if: github.repository_owner == 'BrightID'
         name: Deploy Staging
         runs-on: ubuntu-latest
+        defaults:
+          run:
+            working-directory: BrightID
 
         steps:
             - name: Checkout Repo
@@ -27,7 +30,7 @@ jobs:
 
             - name: Install Dependencies
               if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
-              run: cd BrightID && yarn --frozen-lockfile
+              run: yarn --frozen-lockfile
 
             - name: Deploy to Codepush - Android
               uses: FreeplayApp/codepush-action@master
