--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -16,17 +16,17 @@ jobs:
             - name: Checkout Repo
               uses: actions/checkout@v2
 
-            - name: Use Node.js 12
+            - name: Use Node.js 16
               uses: actions/setup-node@v1
               with:
-                node-version: 12.x
+                node-version: 16.x
 
             - name: Cache node modules
               id: yarn-cache-debug # needed below to check for cache hit or miss
               uses: actions/cache@v2
               with:
                 path: './BrightID/node_modules'
-                key: ${{ runner.os }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+                key: ${{ runner.os }}-modules-16x-${{ hashFiles('./BrightID/yarn.lock') }}
 
             - name: Install Dependencies
               if: steps.yarn-cache-debug.outputs.cache-hit != 'true'  # only install when no cache found
