--- a/.github/workflows/codepush.yml
+++ b/.github/workflows/codepush.yml
@@ -36,7 +36,7 @@ jobs:
               uses: TripleSpeeder/codepush-action@master
               with:
                 directory: BrightID
-                args: release-react -a BrightID/BrightID-android -d Staging
+                args: release-react -a BrightID/BrightID-android -d Staging --disabled --disable-duplicate-release-error --description "${GITHUB_REF_NAME}.${GITHUB_SHA}"
               env:
                 APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN_ANDROID }}
 
@@ -44,6 +44,6 @@ jobs:
               uses: TripleSpeeder/codepush-action@master
               with:
                 directory: BrightID
-                args: release-react -a BrightID/BrightID-ios -d Staging
+                args: release-react -a BrightID/BrightID-ios -d Staging --disabled --disable-duplicate-release-error --description "${GITHUB_REF_NAME}.${GITHUB_SHA}"
               env:
                 APPCENTER_ACCESS_TOKEN: ${{ secrets.APPCENTER_ACCESS_TOKEN_IOS }}
