--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -71,10 +71,10 @@
     "react-i18next": "11.8.6",
     "react-native": "0.66.3",
     "react-native-barcode-mask": "1.2.4",
-    "react-native-camera": "^4.2.1",
+    "react-native-camera": "4.2.1",
     "react-native-code-push": "7.0.4",
-    "react-native-contacts": "^7.0.4",
-    "react-native-country-picker-modal": "^2.0.0",
+    "react-native-contacts": "7.0.4",
+    "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.3.0",
     "react-native-gesture-handler": "1.10.3",
     "react-native-image-crop-picker": "0.37.2",
@@ -82,8 +82,8 @@
     "react-native-keychain": "8.0.0",
     "react-native-localize": "2.1.5",
     "react-native-modal-overlay": "1.3.1",
-    "react-native-modpow": "^1.1.0",
-    "react-native-phone-number-input": "^2.1.0",
+    "react-native-modpow": "1.1.0",
+    "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
     "react-native-reanimated": "1.13.2",
