Add mock implementation for Contacts and SocialMediaService for e2e tests

--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -6,7 +6,7 @@
     "android": "react-native run-android --appIdSuffix debug",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "start:detox": "RN_SRC_EXT=e2e.js react-native start",
+    "start:detox": "RN_SRC_EXT=e2e.js,e2e.ts react-native start",
     "build:detox:android": "detox build -c android",
     "build:detox:ios": "detox build -c ios.sim.debug",
     "build:ios": "react-native bundle --entry-file='index.js' --bundle-output='./ios/main.jsbundle' --dev=false --platform='ios'  --assets-dest='./ios'",
