--- a/BrightID/.detoxrc.json
+++ b/BrightID/.detoxrc.json
@@ -8,42 +8,51 @@
       "launchApp": false
     }
   },
-  "apps": {
-    "ios": {
-      "type": "ios.app",
-      "binaryPath": "ios/build/Build/Products/Debug-iphonesimulator/BrightID.app"
-    },
-    "android": {
-      "type": "android.apk",
-      "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
-      "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd .."
-    }
-  },
   "devices": {
     "simulator": {
       "type": "ios.simulator",
       "device": {
-        "type": "iPhone 11"
+        "type": "iPhone 14"
       }
     },
     "emulator": {
       "type": "android.emulator",
       "device": {
-        "avdName": "Pixel_3a_API_30"
+        "avdName": "Pixel_5_API_31"
       }
     }
   },
-  "configurations": {
-    "android": {
-      "app": "android",
-      "device": "emulator"
+  "apps": {
+    "ios.release": {
+      "name": "BrightID",
+      "type": "ios.app",
+      "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/BrightID.app",
+      "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -sdk iphonesimulator -derivedDataPath ios/build"
     },
-    "ios.sim.debug": {
-      "build": "arch -x86_64 xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -configuration Debug -sdk iphonesimulator -derivedDataPath ios/build EXCLUDED_ARCHS=arm64",
-      "type": "ios.simulator",
-      "device": {
-        "type": "iPhone 12"
-      }
+    "android.debug": {
+      "type": "android.apk",
+      "binaryPath": "android/app/build/outputs/apk/debug/app-debug.apk",
+      "build": "cd android && ./gradlew assembleDebug assembleAndroidTest -DtestBuildType=debug && cd .."
+    },
+    "android.release": {
+      "type": "android.apk",
+      "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
+      "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd .."
+    }
+  },
+
+  "configurations": {
+    "android.emu.debug": {
+      "device": "emulator",
+      "app": "android.debug"
+    },
+    "android.emu.release": {
+      "device": "emulator",
+      "app": "android.release"
+    },
+    "ios.sim.release": {
+      "device": "simulator",
+      "app": "ios.release"
     }
   }
 }
