--- a/BrightID/android/app/build.gradle
+++ b/BrightID/android/app/build.gradle
@@ -164,10 +164,10 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
-        versionCode 44
-        versionName "4.19.0"
+        versionCode 45
+        versionName "4.22.0"
         multiDexEnabled true
-        testBuildType System.getProperty('testBuildType', 'debug')  // This will later be used to control the test apk build type
+        testBuildType System.getProperty('testBuildType', 'debug')
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     signingConfigs {
@@ -292,6 +292,8 @@ dependencies {
     }
 
     androidTestImplementation('com.wix:detox:+')
+
+    implementation 'androidx.appcompat:appcompat:1.3.1' 
 }
 
 // Run this once to be able to run the application with BUCK
