--- a/BrightID/.detoxrc.json
+++ b/BrightID/.detoxrc.json
@@ -27,7 +27,7 @@
       "name": "BrightID",
       "type": "ios.app",
       "binaryPath": "ios/build/Build/Products/Release-iphonesimulator/BrightID.app",
-      "build": "xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -sdk iphonesimulator -derivedDataPath ios/build"
+      "build": "RN_SRC_EXT=e2e.js,e2e.ts xcodebuild -workspace ios/BrightID.xcworkspace -scheme BrightID -sdk iphonesimulator -derivedDataPath ios/build"
     },
     "android.debug": {
       "type": "android.apk",
@@ -37,7 +37,7 @@
     "android.release": {
       "type": "android.apk",
       "binaryPath": "android/app/build/outputs/apk/release/app-release.apk",
-      "build": "cd android && ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd .."
+      "build": "cd android && RN_SRC_EXT=e2e.js,e2e.ts ./gradlew assembleRelease assembleAndroidTest -DtestBuildType=release && cd .."
     }
   },
 
