--- a/BrightID/android/app/src/debug/AndroidManifest.xml
+++ b/BrightID/android/app/src/debug/AndroidManifest.xml
@@ -9,6 +9,6 @@
         tools:targetApi="28"
         tools:ignore="GoogleAppIndexingWarning"
         android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false" />
     </application>
 </manifest>
