--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
     />
     <receiver
       android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
+      android:exported="false"
     >
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -73,6 +74,7 @@
       android:theme="@style/SplashTheme"
       android:label="@string/app_name"
       android:screenOrientation="portrait"
+      android:exported="false"
     >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -84,7 +86,7 @@
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
-      android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
+      android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
       android:launchMode="singleTask"
       android:windowSoftInputMode="adjustResize"
       android:screenOrientation="portrait"
