--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -25,18 +25,19 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "3.12.0",
-    "@react-native-async-storage/async-storage": "1.15.13",
+    "@react-native-async-storage/async-storage": "1.17.10",
     "@react-native-community/blur": "3.6.0",
-    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-community/checkbox": "0.5.12",
     "@react-native-community/clipboard": "1.5.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.10.1",
     "@react-native-community/slider": "3.0.3",
     "@react-native-community/viewpager": "4.2.2",
     "@react-native-picker/picker": "1.9.11",
-    "@react-navigation/drawer": "5.12.3",
-    "@react-navigation/native": "5.9.2",
-    "@react-navigation/stack": "5.14.2",
+    "@react-navigation/drawer": "6.5.0",
+    "@react-navigation/elements": "^1.3.6",
+    "@react-navigation/native": "6.0.13",
+    "@react-navigation/stack": "6.3.2",
     "@reduxjs/toolkit": "1.5.0",
     "@types/crypto-js": "^4.1.0",
     "@types/jsbn": "^1.2.30",
@@ -68,10 +69,10 @@
     "prop-types": "15.8.1",
     "qrcode": "1.5.0",
     "ramda": "0.27.1",
-    "react": "17.0.2",
-    "react-dom": "16.11.0",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-i18next": "11.16.2",
-    "react-native": "0.66.3",
+    "react-native": "0.70.3",
     "react-native-barcode-mask": "1.2.4",
     "react-native-camera": "4.2.1",
     "react-native-code-push": "7.0.4",
@@ -79,23 +80,23 @@
     "react-native-country-picker-modal": "2.0.0",
     "react-native-dropdownalert": "4.5.1",
     "react-native-error-boundary": "^1.1.16",
-    "react-native-gesture-handler": "1.10.3",
     "react-native-http-bridge": "https://github.com/BrightID/react-native-http-bridge",
-    "react-native-image-crop-picker": "0.37.3",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-image-crop-picker": "0.38.0",
     "react-native-keyboard-aware-scroll-view": "0.9.5",
     "react-native-keychain": "8.0.0",
     "react-native-localize": "2.2.1",
     "react-native-modal-overlay": "1.3.1",
     "react-native-modpow": "1.1.0",
-    "react-native-network-info": "^5.2.1",
+    "react-native-network-info": "5.2.1",
     "react-native-phone-number-input": "2.1.0",
     "react-native-push-notification": "8.1.1",
     "react-native-randombytes": "3.6.1",
-    "react-native-reanimated": "1.13.2",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-reanimated": "2.11.0",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "2.17.1",
     "react-native-spinkit": "1.5.1",
-    "react-native-svg": "12.3.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "2.15.2",
     "react-native-url-polyfill": "1.3.0",
     "react-native-vector-icons": "7.1.0",
@@ -111,9 +112,9 @@
     "xml2js": "0.4.23"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.8",
-    "@babel/plugin-syntax-export-default-from": "^7.16.7",
-    "@babel/runtime": "^7.17.8",
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-syntax-export-default-from": "^7.18.6",
+    "@babel/runtime": "^7.19.4",
     "@react-native-community/eslint-config": "^2.0.0",
     "@react-native-community/eslint-plugin": "^1.0.0",
     "@testing-library/jest-native": "^5.3.3",
@@ -122,7 +123,7 @@
     "@types/jest": "^27.4.1",
     "@types/ramda": "^0.27.38",
     "@types/react": "^17.0.34",
-    "@types/react-native": "^0.66.4",
+    "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.1",
@@ -138,7 +139,7 @@
     "babel-plugin-transform-remove-console": "^6.9.4",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "eslint": "^7.20.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^7.2.0",
@@ -153,13 +154,14 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "i18next-parser": "3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^26.6.3",
+    "jetifier": "^2.0.0",
     "lint-staged": "^10.5.3",
-    "metro-react-native-babel-preset": "^0.66.2",
+    "metro-react-native-babel-preset": "0.72.3",
     "mock-async-storage": "^2.2.0",
     "msw": "^0.49.2",
     "prettier": "^2.2.1",
-    "react-test-renderer": "17.0.2",
+    "react-test-renderer": "18.1.0",
     "resolve": "^1.20.0",
     "typescript": "^4.4.4"
   },
