--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -37,6 +37,7 @@
     "@react-navigation/drawer": "6.5.0",
     "@react-navigation/elements": "^1.3.6",
     "@react-navigation/native": "6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "@react-navigation/stack": "6.3.2",
     "@reduxjs/toolkit": "1.5.0",
     "@types/crypto-js": "^4.1.0",
@@ -122,8 +123,6 @@
     "@rnx-kit/dep-check": "^1.13.2",
     "@types/jest": "^27.4.1",
     "@types/ramda": "^0.27.38",
-    "@types/react": "^17.0.34",
-    "@types/react-native": "^0.70.6",
     "@types/react-native-vector-icons": "^6.4.6",
     "@types/react-redux": "^7.1.16",
     "@types/react-test-renderer": "^17.0.1",
