--- a/BrightID/package.json
+++ b/BrightID/package.json
@@ -167,6 +167,9 @@
   "optionalDependencies": {
     "@mermaid-js/mermaid-cli": "^8.9.0"
   },
+  "resolutions": {
+    "react-devtools-core": "~4.25.0"
+  },
   "rnx-kit": {
     "reactNativeVersion": "^0.70.3",
     "kitType": "app",
