--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -17,23 +17,16 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Cache node modules
-        id: yarn-cache # needed below to check for cache hit or miss
-        uses: actions/cache@v2
-        with:
-          path: './BrightID/node_modules'
-          key: ${{ runner.os }}-${{ matrix.node-version }}-modules-${{ hashFiles('./BrightID/yarn.lock') }}
+          cache: 'yarn'
 
       - name: install dependencies
-        if: steps.yarn-cache.outputs.cache-hit != 'true'  # only install when no cache found
-        run: yarn --frozen-lockfile
+        run: yarn install --frozen-lockfile
 
       - name: execute tests
         run: yarn test
