--- a/BrightID/android/app/src/main/AndroidManifest.xml
+++ b/BrightID/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,5 @@
 <manifest
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:tools="http://schemas.android.com/tools"
-  package="org.brightid"
 >
 
   <uses-permission android:name="android.permission.INTERNET" />
@@ -11,6 +9,7 @@
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
   <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
   <application
     android:name=".MainApplication"
@@ -38,20 +37,14 @@
       android:resource="@color/orange"
     /> <!-- or @android:color/{name} to use a standard color -->
 
-    <receiver
-      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions"
-    />
-    <receiver
-      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher"
-    />
-    <receiver
-      android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
-      android:exported="false"
-    >
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationActions" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationPublisher" />
+    <receiver android:name="com.dieam.reactnativepushnotification.modules.RNPushNotificationBootEventReceiver"
+    android:exported="false">
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
             <action android:name="android.intent.action.QUICKBOOT_POWERON" />
-            <action android:name="com.htc.intent.action.QUICKBOOT_POWERON" />
+            <action android:name="com.htc.intent.action.QUICKBOOT_POWERON"/>
         </intent-filter>
     </receiver>
 
@@ -74,7 +67,7 @@
       android:theme="@style/SplashTheme"
       android:label="@string/app_name"
       android:screenOrientation="portrait"
-      android:exported="false"
+      android:exported="true"
     >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
