--- a/BrightID/android/gradle.properties
+++ b/BrightID/android/gradle.properties
@@ -38,5 +38,10 @@ reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
 # to write custom TurboModules/Fabric components OR use libraries that
 # are providing them.
 newArchEnabled=false
+
+# Use this property to enable or disable the Hermes JS engine.
+# If set to false, you will be using JSC instead.
+hermesEnabled=false
+
 org.gradle.daemon=true
 AsyncStorage_db_size_in_MB=10
